--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -18,6 +18,13 @@ jobs:
         with:
           java-version: "11"
 
+      - name: Install flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "2.10.0"
+          channel: "stable"
+        run: flutter --version
+
       - name: Install dependencies
         run: |
           flutter pub get
