--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -22,7 +22,9 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "2.10.0"
-          channel: "stable"
+          channel: "stable"    
+          
+      - name: Version flutter
         run: |
           flutter --version
 
