--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -34,10 +34,10 @@ jobs:
 
       - name: Build APK
         run: |
-          bundle exec fastlane build_android
+          flutter build appbundle
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: app-release.apk
-          path: android/app/build/outputs/apk/release/app-release.apk
+          name: app-release.apk          
+          path: build/app/outputs/bundle/release/app.aab
