--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -32,12 +32,20 @@ jobs:
         run: |
           flutter pub get
 
-      - name: Build APK
-        run: |
-          flutter build appbundle
+#      - name: Build APK
+#        run: |
+#          flutter build appbundle
+
+      - name: Setup Fastlane
+        uses: fastlane/fastlane-action@v2
+        with:
+          version: '2.185.1'
+      
+      - name: Build Android
+        run: fastlane build_android
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: app-release.apk          
+          name: app-release.aab
           path: build/app/outputs/bundle/release/app-release.aab
