--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -32,17 +32,17 @@ jobs:
         run: |
           flutter pub get
 
-#      - name: Build APK
-#        run: |
-#          flutter build appbundle
+      - name: Build APK
+        run: |
+          flutter build appbundle --release
 
-      - name: Setup Fastlane
-        uses: fastlane/fastlane-action@v2
-        with:
-          version: '2.185.1'
+#      - name: Setup Fastlane
+#        uses: fastlane/fastlane-action@v2
+#        with:
+#          version: '2.185.1'
       
-      - name: Build Android
-        run: fastlane build_android
+#      - name: Build Android
+#        run: fastlane build_android
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
