--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -22,8 +22,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "2.10.0"
-          channel: "stable"    
-          
+          channel: "stable"
+
       - name: Version flutter
         run: |
           flutter --version
@@ -34,11 +34,13 @@ jobs:
 
       - name: Build APK
         run: |
-          flutter build appbundle --release
- 
-      - name: Generate Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/bundle/release/*"
-          tag: v${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+          flutter build appbundle
+
+#          flutter build appbundle --release
+
+#      - name: Generate Release
+#        uses: ncipollo/release-action@v1
+#        with:
+#          artifacts: "build/app/outputs/bundle/release/*"
+#          tag: v${{ github.run_number }}
+#          token: ${{ secrets.TOKEN }}
