--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -36,11 +36,9 @@ jobs:
         run: |
           flutter build appbundle
 
-#          flutter build appbundle --release
-
-#      - name: Generate Release
-#        uses: ncipollo/release-action@v1
-#        with:
-#          artifacts: "build/app/outputs/bundle/release/*"
-#          tag: v${{ github.run_number }}
-#          token: ${{ secrets.TOKEN }}
+      - name: Generate Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/bundle/release/*"
+          tag: v${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
