--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -45,6 +45,9 @@ jobs:
 
       - name: Set up Ruby environment
         uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.0"
+          bundler-cache: true
 
       - name: Install Fastlane
         run: gem install fastlane
