--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -1,4 +1,4 @@
-name: Build and deploy APK
+name: Build and deploy in Play Store
 
 on:
   push:
@@ -6,19 +6,22 @@ on:
       - main
 
 jobs:
-  build:
+  # CI - build android
+  build_android:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install Java
+      - name: Setup Java
         uses: actions/setup-java@v1
         with:
           java-version: "11"
 
-      - name: Install flutter
+      # TODO: decripts android keys
+
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "2.10.0"
@@ -28,29 +31,68 @@ jobs:
         run: |
           flutter --version
 
-      - name: Install dependencies
+      - name: Install Flutter dependencies
         run: |
           flutter pub get
 
-      # - name: Build APK
-      #   run: |
-      #     flutter build appbundle
+      - name: Format files
+        run: |
+          flutter format --set-exit-if-changed .
 
-      # - name: Generate Release
-      #   uses: ncipollo/release-action@v1
-      #   with:
-      #     artifacts: "build/app/outputs/bundle/release/*"
-      #     tag: v${{ github.run_number }}
-      #     token: ${{ secrets.TOKEN }}
+      - name: Analyze files
+        run: |
+          flutter analyze .
 
-      - name: Set up Ruby environment
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "3.0"
-          bundler-cache: true
-
-      - name: Install Fastlane
-        run: gem install fastlane
+      - name: Run the tests
+        run: |
+          flutter test
 
       - name: Build APK
-        run: fastlane android build
+        run: |
+          flutter build apk --release
+
+      - name: Build AAB
+        run: |
+          flutter build appbundle --release
+
+      - name: Upload artifact to Github
+        uses: actions/upload-artifact@v1
+        with:
+          name: release-aab
+          path: build/app/outputs/bundle/release/app-release.aab
+          # path: build/app/outputs/apk/release/app-release.apk
+
+      - name: Generate Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/bundle/release/*"
+          tag: v${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
+
+  # CD - deploy in play store
+  # deploy_android:
+  #   runs-on: ubuntu-latest
+  #   needs: [build_android]
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Setup Java
+  #       uses: actions/setup-java@v1
+  #       with:
+  #         java-version: 12.x
+  #     - name: Decrypt Android keys
+  #       run: sh ./.github/scripts/decrypt_android_keys.sh
+  #       env:
+  #         ANDROID_KEYS_SECRET_PASSPHRASE: ${{ secrets.ANDROID_KEYS_SECRET_PASSPHRASE }}
+  #     - name: Setup Flutter
+  #       uses: subosito/flutter-action@v1
+  #       with:
+  #         flutter-version: 1.17.5
+  #     - name: Install Flutter dependencies
+  #       run: flutter pub get
+  #       run: flutter build apk --release
+  #     - name: Run Fastlane
+  #       uses: maierj/fastlane-action@v1.4.0
+  #       with:
+  #         lane: closed_beta
+  #         subdirectory: android
