--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -55,12 +55,12 @@ jobs:
         run: |
           flutter build appbundle --release
 
-      - name: Upload artifact to Github
-        uses: actions/upload-artifact@v1
-        with:
-          name: release-aab
-          path: build/app/outputs/bundle/release/app-release.aab,build/app/outputs/apk/release/app-release.apk
-          # path: build/app/outputs/apk/release/app-release.apk
+      # - name: Upload artifact to Github
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: release-aab
+      #     path: build/app/outputs/bundle/release/app-release.aab,build/app/outputs/apk/release/app-release.apk
+      #     path: build/app/outputs/apk/release/app-release.apk
 
       - name: Generate Release
         uses: ncipollo/release-action@v1
