--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -19,7 +19,11 @@ jobs:
         with:
           java-version: "11"
 
-      # TODO: decripts android keys
+      - name: Update KeyStore password in gradle properties
+        run: sed -i 's/#{SIGNING_STORE_PASSWORD}#/${{ secrets.SIGNING_STORE_PASSWORD }}/g' android/key.properties
+
+      - name: Update KeyStore key password in gradle properties
+        run: sed -i 's/#{SIGNING_KEY_PASSWORD}#/${{ secrets.SIGNING_KEY_PASSWORD }}/g' android/key.properties
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
