--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -6,96 +6,16 @@ on:
       - main
 
 jobs:
-  # CI - build android
   build_android:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: "11"
-
-      - name: Update KeyStore password in gradle properties
-        run: sed -i 's/#{SIGNING_STORE_PASSWORD}#/${{ secrets.SIGNING_STORE_PASSWORD }}/g' android/key.properties
-
-      - name: Update KeyStore key password in gradle properties
-        run: sed -i 's/#{SIGNING_KEY_PASSWORD}#/${{ secrets.SIGNING_KEY_PASSWORD }}/g' android/key.properties
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "2.10.0"
-          channel: "stable"
-
-      - name: Version flutter
-        run: |
-          flutter --version
-
-      - name: Install Flutter dependencies
-        run: |
-          flutter pub get
-
-      - name: Format files
-        run: |
-          flutter format --set-exit-if-changed .
-
-      - name: Analyze files
-        run: |
-          flutter analyze .
-
-      - name: Run the tests
-        run: |
-          flutter test
-
-      - name: Build APK
-        run: |
-          flutter build apk --release
-
-      - name: Build AAB
-        run: |
-          flutter build appbundle --release
-
-      - name: Upload artifact to Github
-        uses: actions/upload-artifact@v1
-        with:
-          name: release-aab
-          path: build/app/outputs/bundle/release/app-release.aab
-
-      - name: Generate Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/bundle/release/*,build/app/outputs/apk/release/*"
-          tag: v${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
-
-  # CD - deploy in play store
-  # deploy_android:
-  #   runs-on: ubuntu-latest
-  #   needs: [build_android]
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
-  #     - name: Setup Java
-  #       uses: actions/setup-java@v1
-  #       with:
-  #         java-version: 12.x
-  #     - name: Decrypt Android keys
-  #       run: sh ./.github/scripts/decrypt_android_keys.sh
-  #       env:
-  #         ANDROID_KEYS_SECRET_PASSPHRASE: ${{ secrets.ANDROID_KEYS_SECRET_PASSPHRASE }}
-  #     - name: Setup Flutter
-  #       uses: subosito/flutter-action@v1
-  #       with:
-  #         flutter-version: 1.17.5
-  #     - name: Install Flutter dependencies
-  #       run: flutter pub get
-  #       run: flutter build apk --release
-  #     - name: Run Fastlane
-  #       uses: maierj/fastlane-action@v1.4.0
-  #       with:
-  #         lane: closed_beta
-  #         subdirectory: android
+      
+      - name: Get Version
+        id: get_version
+        run: echo version="$(grep -m1 '^version:' pubspec.yaml | awk '{print $2}' | sed 's/[[:space:]]//g')" >> $GITHUB_OUTPUT
+      
+      - name: Print version
+        run: echo "La versión es ${{ steps.get_version.outputs.version }}"
