--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -57,9 +57,11 @@ jobs:
         run: |
           flutter build apk --release
 
-      #- name: Build AAB
-      #  run: |
-      #    flutter build appbundle --release
+      - name: Upload artifact to Github
+        uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
       
       - name: Get Version
         id: get_version
@@ -86,6 +88,7 @@ jobs:
           prerelease: false
           
       - name: Attach APK to release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
