--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -38,7 +38,8 @@ jobs:
         run: |
           flutter build apk -t "lib/main_prod.dart" --release
       
-      - name: Add label
+      - name: Add label success
+        if: success()
         uses: actions/github-script@v6
         with:
           script: |
@@ -46,5 +47,17 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ${{ success() }} ? ['build-successful'] :  ['no merge']
+              labels: ['build-successful']
+            })
+
+      - name: Add label failure
+        if: failure()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['no merge']
             })
