--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -36,6 +36,28 @@ jobs:
           
       - name: Build APK
         run: |
-          flutter build apk -t "lib/main_prod.dart" --release
-      
- 
+          flutter build apk -t "lib/main.dart" --release
+          
+      - name: Add label success
+        if: success()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['build-successful']
+            })
+
+      - name: Add label failure
+        if: failure()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['no merge']
+            })
