--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: Generate Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/bundle/release/*,build/app/outputs/apk/release/*"
+          artifacts: "build/app/outputs/apk/release/*"
           tag: v${{ steps.get_version.outputs.version }}
           token: ${{ secrets.TOKEN }}
         
