--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -17,6 +17,9 @@ jobs:
     needs: [ version ]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
