--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -21,59 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Verificar varios runs
-        run: |
-          echo "hola mundo"
-          echo "hello world 2"
-
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: "11"
-          
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "2.10.0"
-          channel: "stable"
-          
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "2.10.0"
-          channel: "stable"
-      
-      - name: Install Flutter dependencies
-        run: |
-          flutter pub get
-      
-      - name: Format files
-        run: |
-          flutter format --set-exit-if-changed .
-      
-      - name: Analyze files
-        run: |
-          flutter analyze .
-
       - name: Update in gradle properties
         run: |
-          sed -i 's/#{SIGNING_STORE_PASSWORD}#/${{ secrets.SIGNING_STORE_PASSWORD }}/g' android/key.properties
-          sed -i 's/#{SIGNING_KEY_PASSWORD}#/${{ secrets.SIGNING_KEY_PASSWORD }}/g' android/key.properties
-
-      - name: Build APK
-        run: |
-          flutter build apk --release
-
-      - name: Upload artifact to Github
-        uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
-
-      - name: Generate Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/release/*"
-          tag: v${{ steps.get_version.outputs.version }}
-          token: ${{ secrets.TOKEN }}
+          sed -i 's/#{GOOGLE_PRIVATE_KEY_ID}#/${{ secrets.GOOGLE_PRIVATE_KEY_ID }}/g' android/app/client_secret.json
         
