--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Ejecutar script de shell
-        run: ./scripts/replace_env.sh
+        run: ./.github/scripts/replace_env.sh
         
       #- name: Update env cliente secret
       #  run: |
