--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -17,15 +17,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18.16.0'
-      
-      - name: Ejecutar script de shell
-        run: |
-          node ./.github/scripts/replace_env2.js
         
-      #- name: Update env cliente secret
-      #  run: |
-      #    sed -i 's/#{GOOGLE_PRIVATE_KEY_ID}#/${{ secrets.GOOGLE_PRIVATE_KEY_ID }}/g' android/app/client_secret.json
-      #    sed -i 's/#{GOOGLE_PRIVATE_KEY}#/${{ secrets.GOOGLE_PRIVATE_KEY }}/g' android/app/client_secret.json
-      #    sed -i 's/#{GOOGLE_CLIENT_EMAIL}#/${{ secrets.GOOGLE_CLIENT_EMAIL }}/g' android/app/client_secret.json
-      #    sed -i 's/#{GOOGLE_CLIENT_ID}#/${{ secrets.GOOGLE_CLIENT_ID }}/g' android/app/client_secret.json
+      - name: Update env cliente secret
+        run: |
+          sed -i 's/#{GOOGLE_PRIVATE_KEY_ID}#/${{ secrets.GOOGLE_PRIVATE_KEY_ID }}/g' android/app/client_secret.json
+          sed -i 's/#{GOOGLE_PRIVATE_KEY}#/${{ secrets.GOOGLE_PRIVATE_KEY }}/g' android/app/client_secret.json
+          sed -i 's/#{GOOGLE_CLIENT_EMAIL}#/${{ secrets.GOOGLE_CLIENT_EMAIL }}/g' android/app/client_secret.json
+          sed -i 's/#{GOOGLE_CLIENT_ID}#/${{ secrets.GOOGLE_CLIENT_ID }}/g' android/app/client_secret.json
+          sed -i 's/#{GOOGLE_CERT_URL}#/${{ secrets.GOOGLE_CERT_URL }}/g' android/app/client_secret.json
         
