--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '18.16.0'
         
-      - name: Update env cliente secret
+      - name: Update env cliente secret 1
         run: |
           sed -i 's/#{GOOGLE_PRIVATE_KEY_ID}#/${{ secrets.GOOGLE_PRIVATE_KEY_ID }}/g' android/app/client_secret.json
           sed -i 's/#{GOOGLE_PRIVATE_KEY}#/${{ secrets.GOOGLE_PRIVATE_KEY }}/g' android/app/client_secret.json
