--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build AAB
         run: |
-          flutter build appbundle -t "lib/main_prod.dart" --release
+          flutter build appbundle -t "lib/main.dart" --release
 
       - uses: actions/upload-artifact@v3
         with:
