--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -58,6 +58,7 @@ jobs:
       #    token: ${{ secrets.TOKEN }}
   verify:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
