--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
-      - uses: actions/upload-artifact@v3
+      - uses: actions/download-artifact@v3
         with:
           name: appbundle
           path: build/app/outputs/bundle/release/app-release.aab
