--- a/.github/workflows/generate-app.yaml
+++ b/.github/workflows/generate-app.yaml
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: appbundle
-          path: ~/build/app/outputs/bundle/release
+          path: build/app/outputs/bundle/release/
           
       - name: Verificar archivo o carpeta
         run: |
