--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -12,8 +12,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+        
       - uses: actions/download-artifact@v3
         with:
-          name: app-release.aab
-          path: build/app/outputs/bundle/release/app-release.aab
+          name: appbundle
+          path: build/app/outputs/bundle/release/
+          
+      - name: Verificar archivo o carpeta
+        run: |
+          if [ -f "build/app/outputs/bundle/release/app-release.aab" ]; then
+            echo "Es un archivo"
+          elif [ -d "ruta/al/elemento" ]; then
+            echo "Es una carpeta"
